# TLSplain

./: LICENSE  LICENSE.mit  README.md
demo/: env.sh
demo/clients/c_client/: client.c  go  preloaded_go
demo/clients/client2/: Cargo.toml  go  go_all  go_all_preloaded  preloaded_go
demo/clients/client2/src/: main.rs
demo/clients/s_client/: 1  2  3  go  preloaded_go
demo/servers/server2/: Cargo.toml
demo/servers/server2/src/: main.rs
demo/servers/server_python/: go  go2  go3  serv.py
dev/archlinux/: howto.txt
dev/archlinux/openssl.repo/: CMPDIFF  LESSDIFF  RUNDIFF  TLSplain.patch  arch.diff  go  go_first_time_extract_and_prep
patch/: TLSplain.patch  TLSplain_3_5_0.patch
