[package]
name = "client2"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
debug = 1 #keep size down
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[dependencies]
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["default-tls"] }
anyhow = "1.0"
