[package]
name = "server2"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
description = "A demo TLS server for the TLSplain project, showcasing patched OpenSSL errors for the client side(but this is the server)"
edition = "2021"

[profile.dev]
opt-level = 0
debug = 1 #keep size down
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[dependencies]
# No dependencies needed!
